# FinAgentIA

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/scripts/: seed.py
apps/edge/: wrangler.toml
apps/edge/src/: index.ts
apps/web/: package.json  tailwind.config.js  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/agent/: route.ts
apps/web/src/app/lib/: api.ts  parseFinancialFile.ts
apps/web/src/components/: ChatBot.tsx  KpiCard.tsx
apps/web/src/pages/: _document.tsx
apps/web/src/routes/projection/: index.ts
apps/web/src/types/: NormalizedTransaction.ts
docs/: ADR-0001-monorepo.md
infra/docker/: compose.yml
infra/terraform/: main.tf
services/workers/: worker.py
tests/e2e/: README.md
tests/load/: README.md
